<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_text">Welcome to Whatsapp clone!</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">Need a new account?</string>
    <string name="create_act">Create a New Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="display_name">Display Name</string>
    <string name="change_pic">Change Picture</string>
    <string name="change_status">Change Status</string>
    <string name="change_color">Change Color</string>
    <string name="send_message">Send Message</string>
    <string name="choose_color">Choose a color</string>

    <!--    General messages-->
    <string name="error_message">Something went wrong</string>

    <!--    Main screen-->
    <string name="not_logged_in">Not Signed In</string>

    <!--    Main toast messages-->
    <string name="login_failed">Failed to login</string>
    <string name="create_account_failed">Failed to create account</string>
    <string name="email_mandatory">Email is mandatory</string>
    <string name="password_mandatory">Password is mandatory</string>
    <string name="displayName_mandatory">Name is mandatory</string>

    <!--    Menu items-->
    <string name="logout_item">Logout</string>
    <string name="settings_item">Settings</string>

    <!--    Change picture-->
    <string name="successful_picture_change">Profile image saved</string>
    <string name="error_picture_change">Profile image not saved</string>

    <!--    Color change screen-->
    <string name="successful_color_change">Color was successfully changed to </string>
    <string name="error_color_change">Color was NOT changed to </string>

    <!--    Status change screen-->
    <string name="successful_status_change">Status updated successfully</string>
    <string name="error_status_change">Status NOT updated</string>

    <!--    Name change screen-->
    <string name="successful_name_change">Name was updated successfully</string>
    <string name="error_name_change">Name was NOT updated</string>

    <!--    Chat screen-->
    <string name="successful_edit_message">Message was updated successfully</string>
    <string name="error_edit_message">Message was NOT updated</string>

</resources>
