<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".main.MainActivity">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="155dp"
        app:srcCompat="@drawable/chat_icon"
        android:id="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="120dp"
        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.134"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
        android:text="@string/welcome_text"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:id="@+id/textView" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.506" app:layout_constraintVertical_bias="0.111"
        android:textStyle="bold|italic" android:textSize="18sp" android:textAlignment="center"
        android:textAllCaps="true"/>
    <Button
        android:id="@+id/loginButtonMain"
        android:text="@string/have_account"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:textColor="@color/grey_100"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.436"
        android:background="@color/colorAccent"/>
    <Button
        android:id="@+id/createActButton"
        android:text="@string/need_account"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:textColor="@color/grey_100"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButtonMain"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintVertical_bias="0.238"
        android:background="@color/colorAccent"/>

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>